# swagger_server/controllers/lectura_controller.py
@@ -2,6 +2,7 @@ import connexion
 import six
 from flask import jsonify
 
+from swagger_server.models import RequestUsuario
 from swagger_server.models.request_lista_contactos import RequestListaContactos  # noqa: E501
 from swagger_server.models.request_lista_usuarios import RequestListaUsuarios  # noqa: E501
 from swagger_server.models.response import Response  # noqa: E501
@@ -15,7 +16,6 @@ def get_read_contactos(body=None):  # noqa: E501
         db = DB_Queries_Methods()
         leer = db.query_lista_contactos(body.id)
         return jsonify(leer), leer['status']
-    return 'do some magic!'
 
 
 def get_read_usuarios(body=None):  # noqa: E501
@@ -24,4 +24,11 @@ def get_read_usuarios(body=None):  # noqa: E501
         db = DB_Queries_Methods()
         leer = db.query_Lista_usuario()
         return jsonify(leer), leer['status']
-    return 'do some magic!'
+
+
+def read_user(body=None):  # noqa: E501
+    if connexion.request.is_json:
+        body = RequestUsuario.from_dict(connexion.request.get_json())  # noqa: E5
+        db = DB_Queries_Methods()
+        leer = db.query_usuarios(body.id)
+        return jsonify(leer), leer['status']
